crates/ferrum-interfaces/tests/ui/vnext/fail/allocation_receipt_buffer_is_private.rs
use ferrum_interfaces::vnext::DeviceAllocationReceipt;

fn raw_buffer(receipt: &DeviceAllocationReceipt<'_>) {
    let _ = receipt.buffer();
}

fn main() {}
